<resources>
    <string name="app_name">Filipino - Ingles Tagasalin</string>
    <string name="favorites">Mga Paborito</string>
    <string name="dark_mode">Madilim na tema</string>
    <string name="history">Kasaysayan</string>
    <string name="about">Tungkol sa Aplikasyon</string>
    <string name="tap_to_enter_text">Pindutin at ilagay ang teksto</string>
    <string name="english_translated">Mga tekstong nasalin na sa Ingles</string>
    <string name="naglo_load_ang_datos_ng_tagasalin">Naglo-load ang datos ng tagasalin</string>
    <string name="paltan_sa_wikang_ingles">Paltan sa Wikang Ingles</string>
    <string name="descriptions">Itong aplikasyon na magbibigay-daan sa iyo upang isalin ang Filipino(Tagalog) sa Ingles vice-versa gamit ang materyal na disenyo.</string>
</resources>